# erc20_near_smart_contract

./: Cargo.toml  README.md
CRUD/client/: .env.example  package-lock.json  package.json
CRUD/client/src/: App.css  App.tsx  index.tsx  types.ts  useNear.tsx
CRUD/contract/: Cargo.toml  readme.md
CRUD/contract/neardev/: dev-account  dev-account.env
CRUD/contract/src/: lib.rs
erc20/: readme.md
erc20/neardev/: dev-account  dev-account.env
erc20/src/: lib.rs
nep4/: Cargo.toml
nep4/src/: lib.rs
src/: lib.rs
