[package]
name = "nep4"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
near-sdk = "2.0.0"
borsh = "0.7.1"
wee_alloc = "0.4.5"
rand = "=0.7.3"
rand_chacha = "=0.2.2"
rand_seeder = "=0.2.1"


[profile.release]
codegen-units = 1

opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true